fix(module-ui): change comment color to make it visible

--- a/css/comments.css
+++ b/css/comments.css
@@ -18,6 +18,7 @@
     height: 5em;
     width: 100%;
     margin-top: 1em;
+    color: black;
 }
 .new-comment input{
     background-color: black;
